--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-material": "~1.0.2",
     "angularfire": "~1.1.3",
     "firebase": "~2.3.2",
-    "angular-new-router": "~0.5.3"
+    "angular-new-router": "~0.5.3",
+    "angular-material-icons": "~0.6.0"
   }
 }
