--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Add-View-and-Edit-",
+  "name": "AVE using ui Router",
   "authors": [
     "taimoor123 <taimoor_t@yahoo.com>"
   ],
@@ -12,15 +12,16 @@
     "**/.*",
     "node_modules",
     "bower_components",
+    "client/vendors",
     "test",
     "tests"
   ],
   "dependencies": {
     "angular": "~1.4.8",
+    "angular-ui-router": "~0.2.15",
     "angular-material": "~1.0.2",
-    "angularfire": "~1.1.3",
+    "angular-material-icons": "~0.6.0",
     "firebase": "~2.3.2",
-    "angular-new-router": "~0.5.3",
-    "angular-material-icons": "~0.6.0"
+    "angularfire": "~1.1.3"
   }
 }
